<resources>
    <string name="app_name">Herdy Manager</string>
    <string name="view_text_key">Key:</string>
    <string name="activity_title_user_details">Details</string>
    <string name="title_activity_dash">DashActivity</string>

    // Button text
    <string name="login">Login</string>
    <string name="btn_text_load_data">Load Data</string>
    <string name="btn_text_retry">Retry</string>

    // Login and Register User texts
    <string name="tv_login">Login</string>
    <string name="bt_login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="tv_username">Username</string>
    <string name="tv_password">Password</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="bt_register">Register</string>
    <string name="tv_register">Register</string>

    // Exception messages
    <string name="exception_message_generic">There was an application error</string>
    <string name="exception_message_no_connection">There is no internet connection</string>
    <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>
    <string name="view_text_value">Value:</string>
    <string name="activity_dashboard">Dashboard</string>
    <string name="activity_login">Login</string>
    <string name="btn_skip">skip</string>
    <string name="btn_finish">Let\'s Go</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Still Empty</string>
    <string name="add_animal_name">Name</string>
    <string name="add_animal_breed">Breed</string>
    <string name="add_animal_sex">Sex</string>
    <string name="add_animal_dob">Date of Birth</string>
    <string name="add_animal_hatchno">Hatch No.</string>
    <string name="bt_add_animal">Add Animal</string>
    <string name="bt_add_animal_cancel">Cancel</string>
    <string name="add_animal_name_hint">e.g Fena</string>
    <string name="add_animal_hatchno_hint">e.g 1 or L5 or #3</string>
    <string name="add_animal_dob_hint">e.g 2016-07-14</string>
    <string name="add_animal_sex_hint">e.g Doe</string>
    <string name="add_animal_breed_hint">e.g Checkered Giant</string>
    <string name="empty_list">Currently Empty</string>
    <string name="empty_try_again">Try Again Later</string>

</resources>
