<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/app_color_animal_overlay"
    android:clickable="true"
    android:orientation="vertical"
    tools:context="co.herdy.manager.presentation.dashboardfeature.view.activity.AddAnimalFragment">

    <LinearLayout
        android:id="@+id/add_animal_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:paddingLeft="@dimen/auth_box_padding"
        android:paddingRight="@dimen/auth_box_padding">

        <TextView
            style="@style/TextView.Title.AddAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_animal_name" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/name_wrapper"
            style="@style/TextInput.Base">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_name"
                style="@style/EditText.AddAnimal.Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/et_hatch_no" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/TextView.Title.AddAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_animal_hatchno" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/hatch_no_wrapper"
            style="@style/TextInput.Base">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_hatch_no"
                style="@style/EditText.AddAnimal.HatchNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/et_dob" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/TextView.Title.AddAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_animal_dob" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dob_wrapper"
            style="@style/TextInput.Base">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_dob"
                style="@style/EditText.AddAnimal.DoB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/et_sex" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/TextView.Title.AddAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_animal_sex" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sex_wrapper"
            style="@style/TextInput.Base">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_sex"
                style="@style/EditText.AddAnimal.Sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusDown="@+id/et_breed" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/TextView.Title.AddAnimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_animal_breed" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/breed_wrapper"
            style="@style/TextInput.Base">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_breed"
                style="@style/EditText.AddAnimal.Breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:nextFocusDown="@+id/bt_add_animal" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_add_animal_cancel"
                style="@style/Button.AddAnimal.Cancel"
                android:layout_marginRight="@dimen/add_button_margin"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_add_animal"
                style="@style/Button.AddAnimal"
                android:layout_marginLeft="@dimen/add_button_margin"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
